--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,94 +1,135 @@
-body{
+body {
      /* border: 2px solid; */
      background-color: rgb(136, 156, 227);
      /* font-family: 'Times New Roman', Times, serif;
       */
-      font-family: 'Open Sans', sans-serif;
-}
-.logo{
-      /* border: 2px solid; */
-      display: block;
-      margin: auto;
-      height: 70px;
-      width: 70px;
+     font-family: 'Open Sans', sans-serif;
 }
 
- .container{
-      
-      max-width: 120vh;
-      /* margin: auto; */
-      margin-top: 5vh;
-      height: 75vh;
-      overflow-y: auto;
+.logo {
+     /* border: 2px solid; */
+     display: block;
+     margin: auto;
+     height: 70px;
+     width: 70px;
+}
 
-      border-radius: 10px;
+.container {
 
-      background-color: #302e38;
-      border: none;
- }
+     max-width: 120vh;
+     /* margin: auto; */
+     margin-top: 5vh;
+     height: 75vh;
+     overflow-y: auto;
 
- .mssg{
-      /* border: 2px solid; */
-      word-wrap: break-word;
-      background-color: antiquewhite;
-      width: 36vh;
-      margin: 14px 2px;
-      padding: 10px;
-      border-radius: 9px;
- }
- 
- .left{
-      float:left;
-      clear:both;
- }
- .right{
-      float:right;
-      clear:both;
- }
+     border-radius: 10px;
 
- .middle{
+     background-color: #302e38;
+     border: none;
+}
+
+.mssg {
+     /* border: 2px solid; */
+     word-wrap: break-word;
+     background-color: antiquewhite;
+     width: 36vh;
+     margin: 14px 2px;
+     padding: 10px;
+     border-radius: 9px;
+}
+
+.left {
+     float: left;
+     clear: both;
+}
+
+.right {
+     float: right;
+     clear: both;
+}
+
+.middle {
      /* border: 2px solid; */
      background-color: #1CAC78;
-     max-width: 15vw;                    /* when user joined */
+     max-width: 15vw;
+     /* when user joined */
      word-wrap: break-word;
      color: white;
      display: block;
      margin: 14px auto;
      clear: both;
      text-align: center;
- }
+}
 
- .leave{      /* when used lefe*/
+.leave {
+     /* when used lefe*/
      background-color: rgb(182, 140, 140);
-     max-width: 15vw;                    /* when user joined */
+     max-width: 15vw;
+     /* when user joined */
      word-wrap: break-word;
      color: white;
      display: block;
      margin: 14px auto;
      clear: both;
      text-align: center;
- }
+}
 
- #formId{
-      /* border: 2px solid; */
-      text-align: center;
-      margin-top: 2px;
- }
+#formId {
+     /* border: 2px solid; */
+     text-align: center;
+     margin-top: 2px;
+}
 
- #mssgInp{
-      width: 40vh;
-      height: 35px ;
-      padding: 10px;
-      border-top-left-radius: 7px;
-      border-bottom-left-radius: 7px;
-      border: none;
- }
+#mssgInp {
+     width: 40vh;
+     height: 35px;
+     padding: 10px;
+     border-top-left-radius: 7px;
+     border-bottom-left-radius: 7px;
+     border: none;
+}
 
- .sendBtn{
-      height: 35px;
-      border-top-right-radius:7px ;
-      border-bottom-right-radius: 7px;
-      background-color: #1CAC78;
- }
+.sendBtn {
+     height: 35px;
+     border-top-right-radius: 7px;
+     border-bottom-right-radius: 7px;
+     background-color: #1CAC78;
+}
 
- 
+
+/* Responsiveness */
+
+@media only screen and (max-width: 356px) {
+     .container {
+          max-width: 90vw;
+          /* margin: auto; */
+          margin-top: 3vh;
+          
+
+     }
+
+     .mssg{
+          width: 50vw;
+          padding: 10px;
+     }
+
+     .send {
+          margin-top: 8px;
+     }
+
+     .middle {
+          background-color: #1CAC78;
+          max-width: 40vw;
+          padding: 4px;
+          font-size: 14px;
+     }
+
+     .leave{
+          max-width: 40vw;
+          padding: 4px;
+          font-size: 14px;
+
+     }
+
+
+}
