--- a/public/css/login.css
+++ b/public/css/login.css
@@ -7,20 +7,23 @@ body {
 
 header{
       position: absolute;
-      top: 25%;
+      top: 30%;
       left: 50%;
       transform: translate(-50%, -50%);
 
 }
 
 .container{
+     
+      background-color: #302e38;
+      box-shadow: 0px 0px 15px white;
 
       border: 5px solid;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      padding: 10px;
+      padding: 30px;
 
       /* height: 20vh; */
 
@@ -32,16 +35,14 @@ header{
       row-gap: 0.5rem;
       justify-content: center;
       align-items: center;
-      
 }
 
 
 .container-inside{
-
       display: grid;
-      grid-template-columns: 7rem auto;
-      row-gap: 1rem; 
-
+      grid-template-columns: auto auto;
+      column-gap: 1rem;
+      row-gap: 1rem;
 }
 
 .inputField{
@@ -57,6 +58,14 @@ header{
 }
 
 
+.buttonsDiv{
+      display: flex;
+      flex-direction: row;
+      column-gap: 1rem;
+      margin-top: 1rem;
+}
+
+
 .buttons{
       font-size: 17px;
       border-radius: 5px;
@@ -68,7 +77,7 @@ header{
 }
 
 #mylink{
-      color: white;
+      color: rgb(136, 156, 227);
 }
 
 #mylink:hover{
