--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -11,16 +11,21 @@ header{
       left: 50%;
       transform: translate(-50%, -50%);
 
+
 }
 
 .container{
+
+     
+      background-color: #302e38;
+      box-shadow: 0px 0px 15px white;
 
       border: 5px solid;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      padding: 10px;
+      padding: 30px;
 
       /* height: 20vh; */
 
@@ -67,7 +72,7 @@ header{
 }
 
 #mylink{
-      color: white;
+      color: rgb(136, 156, 227); ;
 }
 
 #mylink:hover{
