--- a/public/css/firstPage.css
+++ b/public/css/firstPage.css
@@ -1,6 +1,11 @@
 body {
 
-      background-color: rgb(136, 156, 227);
+      /* background-color: rgb(136, 156, 227); */
+      height: 100vh;
+      background-image: url(/Images/bg3.jpg);
+      background-size:cover;
+      background-repeat: no-repeat;
+   
       font-family: 'Open Sans', sans-serif;
  }
 
@@ -17,9 +22,11 @@ body {
       transform: translate(-50%, -50%);
       padding: 10px;
 
+      background-color: #302e38;
+      box-shadow: 0px 0px 15px white;
       color: white;
 
-      height: 10vh;
+      height: 15vh;
       width: 15vw;
       align-items: center;
       justify-content: center;
@@ -28,7 +35,8 @@ body {
  }
 
  .link{
-      color: white;
+     font-size: 30px;      
+     color: white;
  }
 
  .link:hover{
@@ -37,6 +45,11 @@ body {
 
  @media (max-width: 414px) and (min-width: 200px) {
      .container{
+          height: 60px;
+          width: 80px;
           padding: 30px;
      }
+     .link{
+          font-size: 25px;
+     }      
  }
