--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,17 +1,28 @@
 body {
 
-      background-color: rgb(136, 156, 227);
+      /* background-color: rgb(136, 156, 227); */
+      height: 100vh;
+      background-image: url(/Images/bg3.jpg);
+      background-size:cover;
+      background-repeat: no-repeat;
       font-family: 'Open Sans', sans-serif;
       color: white;
 }
 
 header{
       position: absolute;
-      top: 30%;
+      top: 25%;
       left: 50%;
       transform: translate(-50%, -50%);
 
-   
+      font-size: 20px;
+      background-color: white;
+      color:#302e38;;
+      width: 20vw;
+      border-radius: 20px 20px 0 0;
+
+      display: flex;
+      justify-content: center;
 }
 
 .container{
@@ -29,7 +40,7 @@ header{
 
       border-radius: 10px;
       
-      font-size: 20px;
+      font-size: 25px;
       display: flex;
       flex-direction: column;
       row-gap: 0.5rem;
@@ -39,35 +50,36 @@ header{
 
 
 .container-inside{
-      display: grid;
+      /* display: grid;
       grid-template-columns: auto auto;
       column-gap: 1rem;
+      row-gap: 1rem; */
+
+      display: flex;
+      flex-direction: column;
       row-gap: 1rem;
 }
 
 .inputField{
       border-radius: 5px;
       border:none;
-      font-size: 15px;
+      font-size: 20px;
+      padding: 5px;
 }
+
+
 
 .buttonsDiv{
       display: flex;
       flex-direction: row;
       column-gap: 1rem;
-}
-
-
-.buttonsDiv{
-      display: flex;
-      flex-direction: row;
-      column-gap: 1rem;
-      margin-top: 1rem;
+      margin-top: 2rem;
 }
 
 
 .buttons{
       font-size: 17px;
+      padding: 7px;
       border-radius: 5px;
       border:none;
 }
@@ -83,3 +95,10 @@ header{
 #mylink:hover{
       color: aquamarine;
 }
+
+@media (max-width: 414px) and (min-width: 200px) {
+    header{
+      top: 35%;
+      width: 70vw;
+    }    
+} 
