--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -1,17 +1,28 @@
 body {
 
-      background-color: rgb(136, 156, 227);
+      /* background-color: rgb(136, 156, 227); */
+      height: 100vh;
+      background-image: url(/Images/bg3.jpg);
+      background-size:cover;
+      background-repeat: no-repeat;
       font-family: 'Open Sans', sans-serif;
       color: white;
 }
 
 header{
       position: absolute;
-      top: 25%;
+      top: 16%;
       left: 50%;
       transform: translate(-50%, -50%);
 
+      font-size: 20px;
+      background-color: white;
+      color:#302e38;;
+      width: 20vw;
+      border-radius: 20px 20px 0 0;
 
+      display: flex;
+      justify-content: center;
 }
 
 .container{
@@ -31,7 +42,7 @@ header{
 
       border-radius: 10px;
       
-      font-size: 20px;
+      font-size: 25px;
       display: flex;
       flex-direction: column;
       row-gap: 0.5rem;
@@ -41,28 +52,37 @@ header{
 
 .container-inside{
       
-      display: grid;
+      /* display: grid;
       grid-template-columns: auto auto;
       column-gap: 1rem;
+      row-gap: 1rem; */
+
+      display: flex;
+      flex-direction: column;
       row-gap: 1rem;
 }
 
 .inputField{
+
+      /* size: 30px; */
       border-radius: 5px;
       border:none;
-      font-size: 15px;
+      font-size: 20px;
+      padding: 5px;
+      /* size: 20px; */
 }
 
 .buttonsDiv{
       display: flex;
       flex-direction: row;
       column-gap: 1rem;
-      margin-top: 1rem;
+      margin-top: 2rem;
 }
 
 
 .buttons{
       font-size: 17px;
+      padding: 7px;
       border-radius: 5px;
       border:none;
 }
@@ -72,9 +92,19 @@ header{
 }
 
 #mylink{
+      margin-top: 5px;
       color: rgb(136, 156, 227); ;
 }
 
 #mylink:hover{
       color: aquamarine;
+}
+
+@media (max-width: 414px) and (min-width: 200px) {
+      header{
+            top: 29%;
+            width: 70vw;
+      }
+      
+ 
 }
