--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-     border: 2px solid;
+     /* border: 2px solid; */
      /* background-color: rgb(136, 156, 227); */
      /* font-family: 'Times New Roman', Times, serif;
       */
